--- a/popup/popup.css
+++ b/popup/popup.css
@@ -282,6 +282,7 @@ select.form-control {
   height: 28px;
   width: auto;
   min-width: 120px;
+  max-width: 160px;
 }
 
 .btn-icon {
